--- a/css/tooplate-infinite-loop.css
+++ b/css/tooplate-infinite-loop.css
@@ -110,8 +110,13 @@ blockquote {
 }
 
 .tm-nav-link {
-  color: white;
+  color: transparent;
 }
+
+.tm-nav-link:hover {
+  background-color: transparent;
+}
+
 
 .tm-navbar.scroll .tm-nav-link {
   color: #e7406c;
@@ -120,9 +125,10 @@ blockquote {
 .tm-navbar.scroll .tm-nav-link:hover,
 .tm-navbar.scroll .tm-nav-link.current,
 .tm-nav-link:hover {
-  color: #FFF;
-  background-color: #e7406c;
+  color: #e7406c;
+  background-color: transparent;
 }
+
 
 .navbar-toggler {
   border: 1px solid #e7406c;
@@ -173,6 +179,8 @@ blockquote {
   top: 30%;
   color: white;
   position: absolute;
+  text-shadow: 2px 2px 2px #333;
+  font-size: 60px;
 }
 
 .tm-hero-text-container {
@@ -192,7 +200,7 @@ blockquote {
 .tm-hero-subtitle {
   font-family: hello_valentica !important; 
   text-shadow: 2px 2px 2px #333;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 #infinite {
@@ -200,7 +208,7 @@ blockquote {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 80% !important;
+  height: 95% !important;
   width: 100%;
   top: 200px;
   background-position-y: 0px !important;
@@ -208,13 +216,13 @@ blockquote {
 
 .tm-hero-title {
   font-family: hello_valentica !important; 
-  font-size: 6rem;
+  font-size: 8rem;
 }
 
 #localizacao .titulo{
   width: 100%;
   font-size: 1.5rem;
-  padding-top: 80px;
+  padding-top: 60px;
 }
 
 #localizacao .titulo .texto{
@@ -229,8 +237,8 @@ blockquote {
 }
 
 #localizacao .imagem{
-  width: 100%;
-  height: 400px;
+  width: 65%;
+  height: 900px;
   background-image: url(../img/localizacao.png);
   background-size: cover;
   background-position: center center;
@@ -278,6 +286,32 @@ blockquote {
   padding-top: 80px;
 }
 
+.desenho{
+  width: 400px;
+}
+
+.video{
+  width:60%;
+  height:400px;
+}
+
+.espacamento-bem-vindo{
+  padding: 100px;
+}
+
+.mapa{
+  width: 60%;
+  height: 500px;
+}
+
+input{
+  width: 50% !important;
+}
+
+textarea{
+  width: 50% !important;
+}
+
 
 @media (max-width: 500px) {
   #infinite {
@@ -291,6 +325,32 @@ blockquote {
     background-position-y: 0px !important;
   }
 
+  input{
+    width: 95% !important;
+  }
+  
+  textarea{
+    width: 95% !important;
+  }
+
+  .desenho{
+    width: 95%;
+  }
+
+  .espacamento-bem-vindo{
+    padding: 20px;
+  }
+  
+  .video{
+    width:90%;
+    height:400px;
+  }
+
+  .mapa{
+    width: 100%;
+    height: 400px;
+  }
+
   .class-nome{
     width: 100%;
     top: 20%;
@@ -301,6 +361,22 @@ blockquote {
   .tm-hero-title {
     font-size: 4rem;
   }
+
+  .tm-hero-subtitle {
+    font-family: hello_valentica !important; 
+    text-shadow: 2px 2px 2px #333;
+    font-size: 2rem;
+  }
+
+  #localizacao .imagem{
+    width: 100%;
+    height: 400px;
+    background-image: url(../img/localizacao.png);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+  
   
 }
 
@@ -313,7 +389,7 @@ blockquote {
   background-color: white;
   margin: 5px;
   border-radius: 10px 10px 10px 10px;
-  border: solid 1px white;
+  border: solid 1px #e7406c;
   font-family: antipasto;
 }
 
@@ -361,6 +437,11 @@ blockquote {
   border-radius: 0px 0px 10px 10px;
   padding-top: 13px;
   font-size: 23px;
+  cursor: pointer;
+}
+
+.card-produtos .card-produtos-button:hover{
+  background-color: #af0a36;
 }
 
 
