--- a/css/tooplate-infinite-loop.css
+++ b/css/tooplate-infinite-loop.css
@@ -523,41 +523,48 @@ textarea{
 
 .card-produtos{
   display: inline-block;
-  width: 160px;
-  height: 270px;
+  width: 190px;
+  height: 350px;
   background-color: white;
   margin: 5px;
   border-radius: 10px 10px 10px 10px;
-  border: solid 1px #e7406c;
-  font-family: antipasto;
+  font-family: "Roboto", sans-serif;
+  background: #fff;
+  filter: drop-shadow(0px 20px 20px rgba(0, 0, 0, 0.3));
 }
 
 .card-produtos .card-produtos-imagem{
   width: 100%;
   height: 120px;
-  border-radius: 10px 10px 0px 0px;
-  padding: 15px;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .card-produtos .card-produtos-imagem img{
   width: 100%;
   height: 100%;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .card-produtos .card-produtos-texto{
   width: 100%;
-  height: 90px;
-  background-color: #e589a2;
+  height: 172px;
   padding: 5px;
-  font-family: grotesk;
+  font-family: "Roboto", sans-serif;
+  color: #333 !important;
 }
 
 .card-produtos .card-produtos-texto .produto{
-  font-size: 14px;
+  font-size: 15px;
   margin: 0px;
+  height: 30px !important;
+  padding-bottom: 10px;
 }
-
+.card-produtos .card-produtos-texto .descricao{
+  font-size: 12px;
+  margin: 0px;
+  height: 30px !important;
+  color: #888 !important;
+}
 .card-produtos .card-produtos-texto .preco{
   font-size: 30px;
   margin: 0px;
@@ -582,6 +589,15 @@ textarea{
 .card-produtos .card-produtos-button:hover{
   background-color: #af0a36;
 }
+
+
+
+
+
+
+
+
+
 
 
 
